--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
 :root {
     --primary-color: #161618;
+    --primary-color-2:  #181A20;
     --secondary-color: #374151;
 
     --border-color: #262626;
